--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,19 @@
+.header {
+  display: flex;
+  padding: 15px 20px;
+  justify-content: space-between;
+  position: sticky;
+  background-color: white;
+  z-index: 100;
+  top: 0;
+  box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
+}
+
+.header-left {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .header-left > img {
   height: 40px;
   border-radius: 50%;
