--- a/src/assets/MessageSender.css
+++ b/src/assets/MessageSender.css
@@ -48,4 +48,15 @@
   align-items: center;
   color: gray;
   margin: 5px;
+  cursor: pointer;
+}
+
+.messageSender__option > h3 {
+  font-size: medium;
+  margin-left: 10px;
+}
+
+.messageSender__option:hover {
+  background-color: #eff2f5;
+  border-radius: 20px;
 }
