wadd context folder and working on authcontext file

--- a/src/assets/Signup.css
+++ b/src/assets/Signup.css
@@ -1,7 +1,3 @@
-.signup__form >  .MuiTextField {
-  margin-top: 5px;
-}
-
-.signup__form > .MuiButton-root {
-  align-items: center;
-}
+/* .form__button {
+  justify-content: center;
+} */
